--- a/learning-english/src/styles/main.css
+++ b/learning-english/src/styles/main.css
@@ -121,6 +121,9 @@ body::-webkit-scrollbar-thumb:hover {
 	box-shadow: 0px 0px 30px 30px var(--white);
 	color: var(--nav-text);
 	letter-spacing: normal;
+	/* border-bottom: {
+		filter: blur(10px);
+	} */
 }
 
 .nav-row {
@@ -426,7 +429,7 @@ body::-webkit-scrollbar-thumb:hover {
 
 .footer {
 	margin-top: auto;
-	padding: 50px 0 50px;
+	padding: 40px 0 50px;
 	background-color: var(--footer-bg);
 	color: var(--footer-text);
 }
