--- a/learning-english/src/styles/main.css
+++ b/learning-english/src/styles/main.css
@@ -3,33 +3,33 @@
 
 :root {
 	/* Colors */
-	--blackpure: #000;
-	--black: #444444;
-	--black-border: #26292d;
+	--black-pure: #000;
+	--dark: #444444;
+	--dark-border: #26292d;
 	--white: #dddddd;
-	--purple: #7bb0a6;
+	--mint: #7bb0a6;
 
 	/* Nav */
-	--nav-bg: var(--black);
-	--nav-border: var(--black-border);
+	--nav-bg: var(--dark);
+	--nav-border: var(--dark-border);
 	--nav-text: var(--white);
 
 	/* Header */
-	/* --header-bg: var(--black);
+	/* --header-bg: var(--dark);
 	--header-text: var(--white); */
 
 	/* Footer */
-	--footer-bg: var(--black);
+	--footer-bg: var(--dark);
 	--footer-text: var(--white);
 
 	/* Light mode */
 	--page-bg: var(--white);
-	--text-color: var(--black);
-	--accent: var(--purple);
+	--text-color: var(--dark);
+	--accent: var(--mint);
 	--title-1: var(--accent);
 
 	--project-card-bg: var(--white);
-	--project-card-text: var(--black);
+	--project-card-text: var(--dark);
 	--box-shadow: 0px 5px 35px rgba(0, 0, 0, 0.25);
 }
 
@@ -40,7 +40,7 @@
 
 	--title-1: var(--white);
 
-	--project-card-bg: var(--black);
+	--project-card-bg: var(--dark);
 	--project-card-text: var(--white);
 	--box-shadow: 0px 5px 35px rgba(0, 0, 0, 0.8);
 }
@@ -59,20 +59,34 @@ body {
 	color: var(--text-color);
 }
 
+/* body {
+	overflow: auto;
+	scrollbar-width: none;
+	-ms-overflow-style: none;
+	scrollbar-color: transparent;
+} */
+
 body::-webkit-scrollbar {
 	background-color: transparent;
     height: .5rem;
     width: 1rem;
 }
 
+body::-webkit-scrollbar-track {
+	background-color: var(--dark);
+	z-index: 3;
+}
+
 body::-webkit-scrollbar-thumb {
     background-color: var(--white);
-    border-radius: 2px;
-    border: .1rem solid var(--black);
+    border-radius: 5px;
+    border: .01rem solid var(--mint);
+	z-index: 4;
 }
 
 body::-webkit-scrollbar-thumb:hover {
-    background-color: var(--black);
+    background-color: var(--mint);
+	z-index: 4;
 }
 
 /* General */
@@ -161,9 +175,9 @@ body::-webkit-scrollbar-thumb:hover {
 	transition: opacity 0.2s ease-in;
 }
 
-.nav-list__link:hover {
-	/* opacity: 0.8; */
-}
+/* .nav-list__link:hover {
+	opacity: 0.8;
+} */
 
 .nav-list__link--active {
 	position: relative;
