--- a/learning-english/src/styles/main.css
+++ b/learning-english/src/styles/main.css
@@ -8,6 +8,8 @@
 	--dark-border: #26292d;
 	--white: #dddddd;
 	--mint: #7bb0a6;
+	--dark-mint: #6c8784;
+	--dark-white: #bbbbbb;
 
 	/* Nav */
 	--nav-bg: var(--dark);
@@ -59,13 +61,6 @@ body {
 	color: var(--text-color);
 }
 
-/* body {
-	overflow: auto;
-	scrollbar-width: none;
-	-ms-overflow-style: none;
-	scrollbar-color: transparent;
-} */
-
 body::-webkit-scrollbar {
 	background-color: transparent;
     height: .5rem;
@@ -97,27 +92,23 @@ body::-webkit-scrollbar-thumb:hover {
 	max-width: 1200px;
 }
 
-/* .none {
-	display: none !important;
-} */
+/* Home */
 
 .section {
 	padding: 40px 0;
+	text-align: center;
 }
 
 .title-1 {
 	margin-bottom: 60px;
-
 	font-size: 60px;
 	font-weight: 700;
 	line-height: 1.3;
 	color: var(--title-1);
-	text-align: center;
 }
 
 .title-2 {
 	margin: 20px 0;
-
 	font-size: 36px;
 	font-weight: 700;
 	line-height: 1.3;
@@ -185,11 +176,9 @@ body::-webkit-scrollbar-thumb:hover {
 
 .nav-list__link--active::before {
 	content: '';
-
 	position: absolute;
 	left: 0;
 	top: 100%;
-
 	display: block;
 	height: 2px;
 	width: 100%;
@@ -206,33 +195,26 @@ body::-webkit-scrollbar-thumb:hover {
 
 .dark-mode-btn {
 	order: 9;
-
 	position: relative;
 	display: flex;
 	justify-content: space-between;
-
 	width: 51px;
 	height: 26px;
 	padding: 5px;
-
 	border-radius: 50px;
 	background-color: #272727;
 }
 
 .dark-mode-btn::before {
 	content: '';
-
 	position: absolute;
 	top: 1px;
 	left: 1px;
-
 	display: block;
 	width: 24px;
 	height: 24px;
-
 	border-radius: 50%;
 	background-color: #fff;
-
 	transition: left 0.2s ease-in;
 }
 
@@ -245,57 +227,60 @@ body::-webkit-scrollbar-thumb:hover {
 	z-index: 9;
 }
 
-/* Header */
+/* Words */
 
-/* .header {
-	padding: 40px 0;
-	min-height: 695px;
-
-	display: flex;
-	justify-content: center;
-	align-items: center;
-
-	background-color: var(--header-bg);
-	background-image: url('./../img/header-bg.png');
-	background-repeat: no-repeat;
-	background-size: auto;
-	background-position: center center;
-
-	color: var(--header-text);
+.container__words {
+    border: 5px solid var(--mint);
+    border-radius: 25px;
+    width: 50%;
+    min-width: 400px;
+    margin: 40px auto;
+    padding: 40px 20px;
 	text-align: center;
 }
 
-.header__wrapper {
-	padding: 0 15px;
-	max-width: 660px;
-}
-
-.header__title {
-	margin-bottom: 20px;
+h1 {
+	margin-bottom: 10px;
+	color: var(--dark-mint);
 	font-size: 40px;
 	font-weight: 700;
-	line-height: 1.4;
 }
 
-.header__title strong {
-	font-size: 60px;
-	font-weight: 700;
+input {
+    padding: 10px;
+    margin: 10px;
+    border-radius: 5px;
+	border: 1px solid var(--mint);
 }
 
-.header__title em {
-	font-style: normal;
-	color: var(--accent);
+.card {
+    width: 300px;
+	height: 100px;
+    margin: 30px auto;
+    padding: 30px;
+    background-color: var(--dark-mint);
+	/* filter: brightness(90%); */
+	border-radius: 5px;
+	color: var(--dark);
+	text-align: center;
+	letter-spacing: 0.15px;
+	font-size: 30px;
+	font-weight: 500;
 }
 
-.header__text {
-	margin-bottom: 40px;
-	font-size: 18px;
-	line-height: 1.333;
+.card:hover {
+	filter: brightness(120%);
+    transform: scale(1.03);
+	transition: all 0.3s ease;
 }
 
-.header__text p + p {
-	margin-top: 0.5em;
-} */
+.overturned {
+    background-color: var(--dark-white);
+}
+
+.overturned:hover {
+	filter: brightness(90%);
+}
 
 /* Btn */
 
@@ -307,14 +292,12 @@ body::-webkit-scrollbar-thumb:hover {
 	width: 200px;
 	padding: 28px;
 	margin: 30px auto;
-
 	border-radius: 5px;
 	background-color: var(--accent);
 	color: var(--white);
 	letter-spacing: 0.15px;
 	font-size: 16px;
 	font-weight: 500;
-
 	transition: opacity 0.2s ease-in;
 }
 
@@ -335,15 +318,12 @@ body::-webkit-scrollbar-thumb:hover {
 	display: flex;
 	column-gap: 10px;
 	align-items: center;
-
 	height: 48px;
 	padding: 12px 20px;
-
 	border-radius: 5px;
 	border: 1px solid #000;
 	background-color: #fff;
 	color: #000;
-
 	transition: opacity 0.2s ease-in;
 }
 
@@ -354,89 +334,6 @@ body::-webkit-scrollbar-thumb:hover {
 .btn-outline:active {
 	position: relative;
 	top: 1px;
-}
-
-/* Projects  */
-
-.projects {
-	display: flex;
-	justify-content: center;
-	flex-wrap: wrap;
-	column-gap: 30px;
-	row-gap: 30px;
-}
-
-.project {
-	max-width: 370px;
-	background-color: var(--project-card-bg);
-	box-shadow: var(--box-shadow);
-	border-radius: 10px;
-}
-
-.project__img {
-	border-radius: 10px;
-}
-
-.project__title {
-	padding: 15px 20px 25px;
-	font-weight: 700;
-	font-size: 24px;
-	line-height: 1.3;
-	color: var(--project-card-text);
-}
-
-/* Project details */
-
-.project-details {
-	margin: 0 auto;
-	max-width: 865px;
-
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-
-	text-align: center;
-}
-
-.project-details__cover {
-	max-width: 100%;
-	margin-bottom: 40px;
-
-	box-shadow: var(--box-shadow);
-	border-radius: 10px;
-}
-
-.project-details__desc {
-	margin-bottom: 30px;
-
-	font-weight: 700;
-	font-size: 24px;
-	line-height: 1.3;
-}
-
-/* Content list */
-
-.content-list {
-	margin: 0 auto;
-	max-width: 870px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	row-gap: 40px;
-	text-align: center;
-}
-
-.content-list a {
-	color: var(--accent);
-}
-
-.content-list__item {
-	font-size: 18px;
-	line-height: 1.5;
-}
-
-.content-list__item p + p {
-	margin-top: 0.5em;
 }
 
 /* Footer */
@@ -476,21 +373,7 @@ body::-webkit-scrollbar-thumb:hover {
 }
 
 @media (max-width: 620px) {
-	/* Header  */
-
-	.header {
-		min-height: unset;
-	}
-
-	.header__title {
-		font-size: 30px;
-	}
-
-	.header__title strong {
-		font-size: 40px;
-	}
-
-	/* Nav */
+		/* Nav */
 
 	.nav-row {
 		justify-content: space-between;
